--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -166,10 +166,12 @@ header{
 
 .f-logo{
     background-color: #c78c06;
-    margin-top: 1rem;
     margin-left: 1rem;
     margin-right: 1rem;
+    margin-top: 1rem;
+    
 }
+
 
 .clearfix:after{
     content:"";
@@ -209,37 +211,37 @@ li a:hover {
 /*search bar  */
  .search-container {
     width: 100%;
-    font-size: 1rem;
-    align-items: center;
-    padding: 0.5rem;
+    display:flex;
+    
   }
   
-  .f-topnav input[type=text] {
-    width: 85%;
-    padding: 6px;
-    padding-right: 0;
-    margin-top: 8px;
+  .f-topnav .search-container input{
+    width: 80%;
+    height:fit-content;
+    padding-top:5px;
+    padding-right: 6px;
+    padding-bottom: 6px;
+    margin-top: 0.1rem;
     margin-left: 1.5%;
-    margin-bottom: 1.5%;
+    /* margin-bottom: 1rem; */
     font-size: 17px;
-    border: none;
+    border: 1px white;
   }
+ 
   
-  .f-topnav .search-container button {
-    width:10%;
-    /* padding: 6px 10px; */
-    margin-top: 8px;
-    margin-bottom: 1.5%;
-    margin-right: 1%;
+  .f-topnav .search-container button{
     background: #222;
+    width: 10%;
+    margin-left: 0rem;
+    margin-bottom: 1rem;
+    margin-right: 1rem;
     font-size: 17px;
     border: 1px #c78c06;
     /* cursor: pointer; */
   }
+
   
-  /* .f-topnav .search-container button:hover {
-    background: #ccc;
-  } */
+
 
   /* *************************************************************** */
 .f-home{
@@ -249,8 +251,11 @@ li a:hover {
 }
 
 
-.f-home article{
+.homepage{
     background-color: rgba(0, 0, 0, 0.507);
+    width: 100%;
+    margin-top: 0;
+    margin-bottom: 20%;
 }
 
 
@@ -270,14 +275,26 @@ h1{
 	padding: 1rem 1rem 1rem 1rem;
 }
 
-.f-connectbutton a{
+.homebutton{
+    width:fit-content;
     background-color:#c78c06;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+    line-height: 3rem;
+}
+.homebutton i{
+    margin-left: 15px;
+    margin-bottom: 1rem;
+}
+
+.homebutton a {
+    
 	/* top right bottom left */
 	padding: 1rem 1rem 1rem 1.5rem;
+    margin-bottom: 1rem;
 	width:fit-content;
 	text-align: center;
     text-decoration: none;
-    line-height: 3rem;
     color: #222;
 }
 
@@ -580,7 +597,62 @@ table, td, th {
         background: #ccc;
       }
 
+/* **************************************set welcome page ***********************/
+/* ******************************************************************************/
+      .f-home{
+        background: url(../images/main-banner.jpg) no-repeat center center;
+        background-size: cover;
+      }
 
+      .f-aboutus{
+        width: 100%;
+        height: auto;
+        background-color: #ffe6ac;
+        margin: 0 auto;
+      }
+
+      .aboutpage{
+          width: 90%;
+          margin: 0 auto;
+          margin-bottom: 1rem;
+          display: flex;
+          flex-wrap: wrap;
+          height: auto;
+      }
+
+      .aboutpage .about:nth-child(1){
+        flex-basis: 45%;
+        height:auto;
+        
+    }
+    .aboutpage .about:nth-child(2){
+        flex-basis: 45%;
+        height: auto;
+    }
+    .f-aboutusp p{
+        padding-top: 0rem;
+        padding-bottom: 3px;
+    }
+
+    .f-logo{
+        width:auto;
+        display:initial;
+        
+        margin:1rem;
+    }
+
+    header{
+        width: 100%;
+        display:inline-flex;
+    }
+
+    .f-topnav .f-home-link,
+    .f-topnav .f-aboutus-link,
+    .f-topnav .f-services-link,
+    .f-topnav .f-team-link{
+        display:inline; 
+    }
+      
 /* **************************************set our service page********************/
 /* ******************************************************************************/
 
