--- a/mtm6201/landing-page/css/style.css
+++ b/mtm6201/landing-page/css/style.css
@@ -138,179 +138,231 @@ table {
 /*************************** Customers style *******************************/
 /****************************************************************************/
 
+/*Mobile Styling*/
 
+/* Import the local font data: Montserrat-Black via src：url */
 @font-face {
     font-family: Montserrat-Black;
+    /* local path */
     src: url('fonts/Montserrat-Black.ttf');
 }
 
+/* Import the local font data: Montserrat-Regular via src：url */
 @font-face {
     font-family: Montserrat-Regular;
+    /* local path */
     src: url('fonts/Montserrat-Regular.ttf');
 }
 
+/* Import the local font data: Montserrat-Light via src：url */
 @font-face {
     font-family: Montserrat-Light;
+    /* local path */
     src: url('fonts/Montserrat-Light.ttf');
 }
 
-/*Mobile Styling*/
-/* For mobile phones: */
-
-/* Use the 'Montserrat-Light' font for the webpage */
+/* set whole html web font stlye */
 html {
+    /* set font family to Montserrat-Regular */
     font-family: Montserrat-Regular;
-    font-size: 16px;  
+    /* set font size to 1rem(16px) */
+    font-size: 1rem;
 }
 
+/* set header style by using class name which you defined in html file */
 .header {
+    /* set background color */
     background-color: #F7F7FF;
+    /* set header height is automatically*/
     height: auto;
 
 }
 
+/* set body detail*/
 body {
     width: 100%;
+    /* set font to Montserrat-Regular*/
     font-family: Montserrat-Regular;
+    /*shorthand for setting the top and bottom margins to zero, and the left and right margins to auto.*/
     margin: 0 auto;
     background-color: #F7F7FF;
 }
 
+/* set h1, h2, h4 font style, Only set their commonality*/
 h1,
 h2,
 h4 {
     font-family: Montserrat-Black;
+    /* font style is bold */
     font: bold;
 }
 
+/* only set h1 style:"Want to be your own boss?" */
 h1 {
-    font-size: 60px;
+    /* 3.75rem = 60px */
+    font-size: 3.75rem;
+    /* Displays an element as an inline-level flex container */
     display: inline-flex;
-    margin: 0.5rem;
+    /* controlling h1's margin, top right bottom lefte margin 0.5rem(1 px)*/
+    margin: 0.0625rem;
 }
 
+/* only set h2 style: "Apply Now" */
 h2 {
-    font-size: 40px;
+    /* 2.5rem = 40px */
+    font-size: 2.5rem;
     margin-left: auto;
-    padding: 10px;
+    padding: 0.625rem;
 }
 
+/* only set h3 style: "Enter your info below." */
 h3 {
     font-family: Montserrat-Regular;
     margin-left: auto;
-    padding: 10px;
+    /* Shorthand property to set 0.625rem the thickness of the padding area. */
+    padding: 0.625rem;
 }
 
+/* set logo image size and position */
 .logo {
+    /* Images accounted for 25% of the total */
     width: 25%;
     height: auto;
     float: left;
+    /* Shorthand property to set accounted for 10% of the total the thickness of the margin area. */
     margin-left: 10%;
-    
+
 }
 
+/* All the paragraphs are there.Details in the .box(defined in html file) class */
 .box p {
     font-family: Montserrat-Regular;
-    font-size: 24px;
+    font-size: 1.5rem;
+    /* Shorthand property to set 0.5rem the thickness of the margin area.*/
     margin: 0.5rem;
 }
 
-.box-1{
+/* set .box-1 width accounted for 80% of the total  
+    box-1 are h1 and <p>*/
+.box-1 {
     width: 80%;
 }
 
-.box-2{
+/* set .box-2 width accounted for 80% of the total  
+    box-1 is the apply now whole from*/
+.box-2 {
     width: 80%;
 }
 
+/* keep box elements and scooter image at the page of center */
 .box,
-.scooter{
+.scooter {
     margin: 0 auto;
 }
 
+/* .cf is the form class name
+    set form withe background color and shadow */
 .cf {
     width: 80%;
     margin-top: 1rem;
     margin-bottom: 2.5rem;
     margin-left: auto;
     margin-right: auto;
-    padding: 15px;
+    padding: 0.9375rem;
     background: #FFFF;
+    /* Attaches one drop-shadows to the box with color and angle. */
     box-shadow: rgba(187, 187, 187, 1) 0 0px 20px -1px;
     -webkit-box-shadow: rgba(187, 187, 187, 1) 0 0px 20px -1px;
+    /* Set the border to rounded corners*/
     border-radius: 11px;
     -webkit-border-radius: 11px;
 }
 
+/* only set paragraphs detail in .cf class*/
 .cf p {
-    font-size: 14px;
+    font-size: 0.875rem;
+    /* Displays an element as an inline element. Any height and width properties will have no effect */
     display: inline;
     margin-left: 0.2rem;
-   
+
 }
 
-
+/* set a(as a link) in .cf class
+    padding: 0;
+    here we need remove box-shadow, background and padding
+    that we set in .cf*/
 .cf a {
-    font-size: 14px;
+    /* set font size */
+    font-size: 0.875rem;
     color: red;
+    /* Decorations applied to font used for an element's text. 
+        value none means remove decoration */
     text-decoration: none;
+    /* remove box-shadow*/
     box-shadow: none;
+    /*  remove background */
     background: none;
+    /* no padding value here */
     padding: 0;
 }
 
-button{
+/* set all button detail, Only set their commonality */
+button {
     width: 100%;
     font-weight: bold;
     font-size: 1.5rem;
     text-align: center;
-    padding: 15px;
+    padding: 0.9375rem;
+    /* no border needed, remove border */
     border: none;
+    /* Set the border to rounded corners */
     border-radius: 11px;
 }
 
+/* only set "drive with us" button - Separate requirements*/
 .drive {
-    background-color: #57EEAB; 
+    width: 100%;
+    background-color: #57EEAB;
     margin-top: 1rem;
     margin-bottom: 1rem;
+    /* we need remove box-shadow, because this key is in the from and we were set it */
     box-shadow: none;
 }
 
- .calculate {
-    width: 90%;
+/* only set "calculate" button - Separate requirements */
+.calculate {
+    width: 100%;
     background-color: #FF8480;
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-    margin-top: 0.5rem;
-    margin-bottom: 1.5rem;
     color: white;
+    padding: 0.625rem;
 }
 
-.hour,
-.city{
-   width: 85%;
-   margin-left: 1.5rem;
-   margin-right: 1.5rem;
-   margin-bottom: 0.5rem;
-}
-
-
-li {
-    list-style: none;
-    padding: 5px;
-}
-
+/* set all input element detail, Only set their commonality*/
 input {
     background-color: #F4F4F5;
-    padding: 10px;
+    width: 93%;
+    padding: 0.625rem;
     border: none;
     border-radius: 11px;
-    margin-right: 1rem;
+    margin: 0.5rem;
 }
 
+/*  */
+.cf .checkbox {
+    float: left;
+    padding: 0;
+    margin: 0;
+}
+
+.cf .agreetext {
+    float: left;
+}
+
+/* set all placeholder elements color to #9B9B9B */
 ::placeholder {
 
     color: #9B9B9B;
+    /* Opacity of an element's text, where 1 is opaque and 0 is entirely transparent. */
     opacity: 1;
     /* Firefox */
 }
@@ -325,56 +377,93 @@ input {
     color: #9B9B9B;
 }
 
-/* .f-contactform {
-    border-radius: 11px;
-    margin-bottom: 1rem;
-} */
-
-
-
-.footer h4 {
-    font-size: 18px;
-    padding: 1.5rem;
-}
-
-.footer p {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-    padding-bottom: 1.5rem;
-}
-
-
-.f-contactform .field-2 {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.field-2 .block:nth-child(1) {
-    flex-basis: 25%;
-}
-
-.field-2 .block:nth-child(2) {
-    flex-basis: 67%;
-}
-
-.field-2 .block:nth-child(3) {
-    flex-basis: 97%;
-}
-
-.field-3 {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-end;
-    padding: 5%;
-}
-
+/* set footer detail like width height ext. */
 .footer {
     width: 100%;
+    height: auto;
     background-color: #FFFD8C;
 }
 
+/* set h4 element stlye :"See how much you earn with Dash." */
+h4 {
+    /* Displays an element as an inline-level block container. 
+    The element itself is formatted as an inline element, but you can apply height and width values */
+    display: inline-block;
+    font-size: 1.125rem;
+    padding: 1.5rem 0 0 3rem;
+}
 
+/* set thickness value of paragraphs in footer*/
+.footer p {
+    padding: 1.5rem 0 1.5rem 3rem;
+}
 
+/* Overwrite the input format we wrote earlier */
+.f-contactform input {
+    font-size: 1rem;
+    padding: 0.83rem;
+
+}
+
+/* field-2 inculd hour city and calculate three elements 
+    .f-contactform is treated as their container*/
+.field-2 .f-contactform {
+    margin: 0 auto;
+    width: 100%;
+    /* Displays an element as a block-level grid container */
+    display: grid;
+    /* Specifies the size(s) of the columns and rows, 3 is 3columns 1fr is size of each */
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    /* Aligns flex items along the cross axis of the current line of the flex container. 
+        there we use center to center all elements*/
+    align-items: center;
+
+}
+
+/* set first block size, first block is "hour" */
+.f-contactform .block:nth-child(1) {
+    /* size is from frist line to second line (3 column have 4 lines)*/
+    grid-column: 1/2;
+    /* size is from frist line to second line for row */
+    grid-row: 1/2;
+    margin-left: 2.5rem;
+    padding-right: 2rem;
+
+}
+
+/* set second block size, the block is "city" */
+.f-contactform .block:nth-child(2) {
+    /* size is from line 2 to line 4 (3 column have 4 lines)*/
+    grid-column: 2/4;
+    grid-row: 1/2;
+    padding-right: 3rem;
+
+}
+
+/* set last block size, the block is "button calculate" */
+.f-contactform .block:nth-child(3) {
+    grid-column: 1/4;
+    grid-row: 2/3;
+    padding-left: 3rem;
+    margin-right: 3rem;
+}
+
+/* .field-3 inculd 4 icons */
+.field-3 {
+    display: flex;
+    /*aligns the flexible container's items 
+    Items are positioned in the center of the container */
+    justify-content: center;
+    /*align the items vertically. 
+    Items are positioned at the end of the container */
+    align-items: flex-end;
+}
+
+/* Adjust the spacing about icons */
+.field-3 .block {
+    margin: 1.5rem 3rem 1.5rem 0;
+}
 
 
 
@@ -382,27 +471,153 @@ input {
 /*******************Tablet Styling******************************************/
 /****************************************************************************/
 
+/* Set the flat screen size of tablet */
 @media only screen and (min-width: 768px) {
-    /* For desktop: */
 
-    /* ***************set max width************************** */
-    body{
-        max-width: 768px;
+    /* Sets the size and position of the logo icon on the tablet page */
+    .logo {
+        width: 18%;
+        height: auto;
+        float: left;
+        margin-left: 10%;
+
     }
+
+    /* field-2 inculd hour city and calculate three elements 
+    .f-contactform is treated as their container
+     Rearrange oneself*/
+    .field-2 .f-contactform {
+        margin: 0 auto;
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        align-items: center;
+
+    }
+
+    /* set first block size, first block is "hour" */
+    .f-contactform .block:nth-child(1) {
+        grid-column: 1/3;
+        grid-row: 1/3;
+        margin-left: 2.5rem;
+        padding-right: 2rem;
+
+    }
+
+    /* set second block size, the block is "city" */
+    .f-contactform .block:nth-child(2) {
+        grid-column: 3/7;
+        grid-row: 1/3;
+        padding-right: 2rem;
+
+    }
+
+    /* set last block size, the block is "button calculate" */
+    .f-contactform .block:nth-child(3) {
+        grid-column: 7/11;
+        grid-row: 1/3;
+        padding-left: 0rem;
+        padding-right: 2rem;
+    }
+
 }
 
 /****************************************************************************/
 /*******************Desktop Styling******************************************/
 /****************************************************************************/
 
+/* Set the flat screen size of Desktop */
 @media only screen and (min-width: 1280px) {
     /* For desktop: */
-.footer{
-    width: 100%;    
-}
 
+    /* Re-layout the header */
+    .header {
+        /* isplays an element as an inline-level block container. 
+        The element itself is formatted as an inline element, but you can apply height and width values */
+        display: inline-block;
+        background-color: #F7F7FF;
+        margin-top: 1rem;
+    }
 
-      
+    /* set logo image size and position */
+    .logo {
+        width: 22%;
+        height: auto;
+        float: left;
+        margin-left: 3.5rem;
+    }
 
+    /* Think of .main as a container and set the size and format of the container 
+        there are three box contained
+        */
+    .main {
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        /*Use a grid for layout  */
+        display: grid;
+        grid-template-columns: repeat(9, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+    }
+
+    /* position of the first box inside .main  */
+    .main .box:nth-child(1) {
+        /* column position from line 1 to line 5 */
+        grid-column: 1/5;
+        /* row position from line 2 to line 4 */
+        grid-row: 2/4;
+    }
+
+    /* position of the second box inside .main
+        It overlaps 2fr with the first box*/
+    .main .box:nth-child(2) {
+        /* column position from line 3 to line 8 */
+        grid-column: 3/8;
+        /* row position from line 1 to line 6 */
+        grid-row: 1/6;
+        margin-top: 15%;
+    }
+
+    /* position of the last box inside .main  
+       It overlaps 2fr with the second box*/
+    .main .box:nth-child(3) {
+        /* column position from line 6 to line 10 */
+        grid-column: 6/10;
+        /* row position from line 2 to line 6 */
+        grid-row: 2/6;
+        margin-left: 20%;
+    }
+
+    /* Think of .footer as a container and set the size and format of the container 
+        there are three field contained
+        */
+    .footer {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+
+    /* position of the first field inside .footer  */
+    .field:nth-child(1) {
+        grid-column: 1/6;
+        grid-row: 1/3;
+    }
+
+    /* position of the second field inside .footer  */
+    .field:nth-child(2) {
+        grid-column: 1/6;
+        grid-row: 3/5;
+    }
+
+    /* position of the last field inside .footer  */
+    .field:nth-child(3) {
+        grid-column: 9/11;
+        grid-row: 2/4;
+        align-items: center;
+    }
 
 }
